--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "version": "3.2.0"
   },
   "scripts": {
-    "start": "hexo server"
+    "start": "server --open",
+    "build": "hexo clean && hexo generate"
   },
   "dependencies": {
     "hexo": "^3.2.0",
