Content(Refactor) Moved content to content/
And added atom support

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ permalink: :year/:month/:day/:title/
 permalink_defaults:
 
 # Directory
-source_dir: source
+source_dir: content
 public_dir: public
 tag_dir: tags
 archive_dir: archives
@@ -64,6 +64,10 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: beryllium
+feed:
+  type: atom
+  path: atom.xml
+  limit: false
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
