chore(Build): Added commitizen and sitemap.xml
better commits and seo [ci skip]

--- a/_config.yml
+++ b/_config.yml
@@ -64,10 +64,14 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: beryllium
+
 feed:
   type: rss2
   path: rss2.xml
   limit: false
+
+sitemap:
+  path: sitemap.xml
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
