--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.1.0",
     "hexo-generator-index": "^0.2.0",
+    "hexo-generator-sitemap": "^1.1.2",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-jade": "^0.3.0",
     "hexo-renderer-less": "^0.1.3",
@@ -24,6 +25,12 @@
     "hexo-server": "^0.2.0"
   },
   "devDependencies": {
+    "cz-conventional-changelog": "^1.1.5",
     "gh-pages": "^0.11.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
