refactor(Content): Scaffolded-out Join-us and Enterprise UX pages
Created these pages using hexo to make all the index/

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
+title: 100 Shapes – Designing systems for people with people UX & Design studio
+subtitle: A subtitle here
+description: 100 Shapes site design
 author: John Doe
 language:
 timezone:
