--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,9 @@ feed:
 sitemap:
   path: sitemap.xml
 
+category_generator:
+  per_page: 10
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
