chore(Travis): Added node_modules back to cache
fixed by cached files in .git

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,7 @@ notifications:
   email: false
 cache:
   directories:
-  - node_modules/hexo
-  - node_modules/hexo-generator-feed
-  - node_modules/hexo-renderer-jade
-  - node_modules/hexo-renderer-less
-  - node_modules/hexo-server
+  - node_modules
 branches:
   only:
   - master
